--- a/masuk.html
+++ b/masuk.html
@@ -22,7 +22,11 @@
     <script src="js/login-register.js" type="text/javascript"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container col-md-offset-2">
+      <h1 style="position: relative center">Silakan Masuk untuk menggunakan layanan internal Pustanda</h1>
+    </div>
+
+    <div class="container col-md-offset-2">
       <div class="row">
         <div class="col-sm-4"></div>
         <div class="col-sm-4">
@@ -36,62 +40,20 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-              <h4 class="modal-title">Masuk dengan</h4>
+              <h4 class="modal-title">Masuk</h4>
             </div>
-            <div class="modal-body">
-              <div class="box">
-                <div class="content">
-                  <div class="social">
-                    <a class="circle github" href="#">
-                      <i class="fa fa-github fa-fw"></i>
-                    </a>
-                    <a id="google_login" class="circle google" href="#">
-                      <i class="fa fa-google-plus fa-fw"></i>
-                    </a>
-                    <a id="facebook_login" class="circle facebook" href="#">
-                      <i class="fa fa-facebook fa-fw"></i>
-                    </a>
-                  </div>
-                  <div class="division">
-                    <div class="line l"></div>
-                    <span>or</span>
-                    <div class="line r"></div>
-                  </div>
-                  <div class="error"></div>
+            
                   <div class="form loginBox">
                     <form method="" action="" accept-charset="UTF-8">
-                      <input id="email" class="form-control" type="text" placeholder="Email" name="email" />
-                      <input id="password" class="form-control" type="password" placeholder="Password" name="password" />
-                      <input class="btn btn-default btn-login" type="button" value="Login" onclick="loginAjax()" />
+                      <input id="email" class="form-control" type="text" placeholder="Pos-el" name="email" />
+                      <input id="password" class="form-control" type="password" placeholder="Kata Sandi" name="password" />
+                      <input class="btn btn-default btn-login" type="button" value="Masuk" onclick="loginAjax()" />
                     </form>
                   </div>
                 </div>
               </div>
-              <div class="box">
-                <div class="content registerBox" style="display: none">
-                  <div class="form">
-                    <form method="" html="{:multipart=>true}" data-remote="true" action="" accept-charset="UTF-8">
-                      <input id="email" class="form-control" type="text" placeholder="Email" name="email" />
-                      <input id="password" class="form-control" type="password" placeholder="Password" name="password" />
-                      <input id="password_confirmation" class="form-control" type="password" placeholder="Repeat Password" name="password_confirmation" />
-                      <input class="btn btn-default btn-register" type="button" value="Create account" name="commit" />
-                    </form>
-                  </div>
-                </div>
               </div>
             </div>
-            <div class="modal-footer">
-              <div class="forgot login-footer">
-                <span
-                  >Looking to
-                  <a href="javascript: showRegisterForm();">create an account</a>
-                  ?</span
-                >
-              </div>
-              <div class="forgot register-footer" style="display: none">
-                <span>Already have an account?</span>
-                <a href="javascript: showLoginForm();">Login</a>
-              </div>
             </div>
           </div>
         </div>
