added section layanan

--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
             <div class="box-slider-content">
               <div class="box-slider-text">
                 <h2 class="box-slide-title">PUSAT PENGUATAN DAN PEMBERDAYAAN BAHASA</h2>
-                <h3 class="box-slide-sub-title">Badan Pengembangan dan Pembinaan Bahasa</h3>
+                <h1 class="box-slide-sub-title">Badan Pengembangan dan Pembinaan Bahasa</h1>
                 <p class="box-slide-description"></p>
                 <p>
-                  <a href="#" class="slider btn btn-primary">Layanan Kami</a>
+                  <a href="/services.html" class="slider btn btn-primary">Layanan Kami</a>
                 </p>
               </div>
             </div>
@@ -193,7 +193,16 @@
       <!--    </div>--><!-- Action style box -->
       <!--  </div>--><!-- Container end -->
       <!-- </section>--><!-- Action end -->
-
+        
+      <!-- Section Layanan Eksternal-->
+      <section id="external-services" class="external-services-area alert-bg">
+        <div class="container">
+          <div class="row text-center">
+            <div class="col-sm-12">
+              <h3 class="section-sub-title">Layanan Eksternal</h3>
+            </div>
+          </div>
+      
       <section id="ts-features" class="ts-features pb-2">
         <div class="container">
           <div class="row">
@@ -207,9 +216,9 @@
                     <img loading="lazy" src="images/icon-image/service-icon1.png" alt="service-icon" />
                   </div>
                   <div class="ts-service-info">
-                    <h3 class="service-box-title"><a href="service-single.html">Zero Harm Everyday</a></h3>
-                    <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
-                    <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a>
+                    <h3 class="service-box-title"><a href="/eksternal-bipa.html">Bahasa Indonesia bagi Penutur Asing</a></h3>
+                    <p>Layanan fasilitasi dan koordinasi dalam bidang Bahasa Indonesia bagi Penutur Asing (BIPA) untuk meningkatkan fungsi bahasa Indonesia menjadi bahasa internasional.</p>
+                    <a class="learn-more d-inline-block" href="/eksternal-bipa.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
                   </div>
                 </div>
               </div>
@@ -227,9 +236,9 @@
                     <img loading="lazy" src="images/icon-image/service-icon2.png" alt="service-icon" />
                   </div>
                   <div class="ts-service-info">
-                    <h3 class="service-box-title"><a href="service-single.html">Virtual Construction</a></h3>
-                    <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
-                    <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a>
+                    <h3 class="service-box-title"><a href="/eksternal-penerjemahan.html">Penerjemahan</a></h3>
+                    <p>Lorem ipsum dolor suscipit.</p>
+                    <a class="learn-more d-inline-block" href="/eksternal-penerjemahan.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
                   </div>
                 </div>
               </div>
@@ -247,9 +256,9 @@
                     <img loading="lazy" src="images/icon-image/service-icon3.png" alt="service-icon" />
                   </div>
                   <div class="ts-service-info">
-                    <h3 class="service-box-title"><a href="service-single.html">Build To Last</a></h3>
+                    <h3 class="service-box-title"><a href="/eksternal-lainnya.html">Build To Last</a></h3>
                     <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
-                    <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a>
+                    <a class="learn-more d-inline-block" href="/eksternal-lainnya.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a>
                   </div>
                 </div>
               </div>
