--- a/index.html
+++ b/index.html
@@ -71,11 +71,8 @@
             <div class="row">
               <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg navbar-light p-0">
-                  <div class="logo">
-                    <a class="d-block" href="index.html">
-                      <!--- <img loading="lazy" src="images/logo.png" alt="Constra"> -->
-                      PUSTANDA
-                    </a>
+                  <div class="logo-container">
+                      <img class="logo img-fluid" src="images/logo.png" alt="Pustanda">
                   </div>
                   <!-- logo end -->
 
