Melengkapi file navigasi

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <body>
     <div class="body-inner">
       <!-- Header start -->
-      <header id="header" class="header-two">
+      <header id="header" class="header-one">
         <div class="site-navigation">
           <div class="container">
             <div class="row">
@@ -104,17 +104,17 @@
                       <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Layanan <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu" role="menu">
-                          <li><a href="#">BIPA</a></li>
-                          <li><a href="#">Penerjemahan</a></li>
+                          <li><a href="/eksternal-bipa.html">BIPA</a></li>
+                          <li><a href="/eksternal-penerjemahan.html">Penerjemahan</a></li>
                         </ul>
                       </li>
 
                       <li class="nav-item">
-                        <a href="#" class="nav-link">Galeri</a>
+                        <a href="/galeri.html" class="nav-link">Galeri</a>
                       </li>
 
                       <li class="nav-item">
-                        <a href="#" class="nav-link">Berita</a>
+                        <a href="/berita.html" class="nav-link">Berita</a>
                       </li>
 
                       <li class="nav-item">
@@ -148,7 +148,7 @@
                 <h1 class="box-slide-sub-title">Badan Pengembangan dan Pembinaan Bahasa</h1>
                 <p class="box-slide-description"></p>
                 <p>
-                  <a href="/services.html" class="slider btn btn-primary">Layanan Kami</a>
+                  <a href="/layanan.html" class="slider btn btn-primary">Layanan Kami</a>
                 </p>
               </div>
             </div>
@@ -196,7 +196,7 @@
         <div class="container">
           <div class="row text-center">
             <div class="col-sm-12">
-              <h3 class="section-sub-title">Layanan Eksternal</h3>
+              <h3 class="section-sub-title">Layanan Pustanda</h3>
             </div>
           </div>
       
@@ -234,7 +234,7 @@
                   </div>
                   <div class="ts-service-info">
                     <h3 class="service-box-title"><a href="/eksternal-penerjemahan.html">Penerjemahan</a></h3>
-                    <p>Lorem ipsum dolor suscipit.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat eius saepe quo quod porro, reiciendis incidunt deserunt iusto labore aliquid?</p>
                     <a class="learn-more d-inline-block" href="/eksternal-penerjemahan.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
                   </div>
                 </div>
@@ -253,9 +253,9 @@
                     <img loading="lazy" src="images/icon-image/service-icon3.png" alt="service-icon" />
                   </div>
                   <div class="ts-service-info">
-                    <h3 class="service-box-title"><a href="/eksternal-lainnya.html">Build To Last</a></h3>
-                    <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
-                    <a class="learn-more d-inline-block" href="/eksternal-lainnya.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a>
+                    <h3 class="service-box-title"><a href="/eksternal-lainnya.html">Layanan Internal</a></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis illum aspernatur ab dolores eaque numquam similique repellendus ratione repellat accusamus.</p>
+                    <a class="learn-more d-inline-block" href="/eksternal-lainnya.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
                   </div>
                 </div>
               </div>
