--- a/masuk.html
+++ b/masuk.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Masuk Layanan Internal</title>
+    <title>Pustanda | Masuk Layanan Internal</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
