--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <h3 class="column-title">Testimoni Mitra Pustanda</h3>
+              <h3 class="column-title">Kata Mereka</h3>
 
               <div id="testimonial-slide" class="testimonial-slide">
                 <div class="item">
@@ -597,8 +597,8 @@
                     <div class="quote-item-footer">
                       <img loading="lazy" class="testimonial-thumb" src="images/clients/testimonial1.png" alt="testimonial" />
                       <div class="quote-item-info">
-                        <h3 class="quote-author">Gabriel Denis</h3>
-                        <span class="quote-subtext">Chairman, OKT</span>
+                        <h3 class="quote-author">Nadiem Anwar Makarim</h3>
+                        <span class="quote-subtext">Mendikbudristek</span>
                       </div>
                     </div>
                   </div>
