--- a/index.html
+++ b/index.html
@@ -36,45 +36,6 @@
 </head>
 <body>
   <div class="body-inner">
-<!--
-    <div id="top-bar" class="top-bar">
-        <div class="container">
-          <div class="row">
-              <div class="col-lg-8 col-md-8">
-                <ul class="top-info text-center text-md-left">
-                    <li><i class="fas fa-map-marker-alt"></i> <p class="info-text">9051 Constra Incorporate, USA</p>
-                    </li>
-                </ul>
-              </div>
--->
-              <!--/ Top info end -->
-<!--  
-              <div class="col-lg-4 col-md-4 top-social text-center text-md-right">
-                <ul class="list-unstyled">
-                    <li>
-                      <a title="Facebook" href="https://facebbok.com/themefisher.com">
-                          <span class="social-icon"><i class="fab fa-facebook-f"></i></span>
-                      </a>
-                      <a title="Twitter" href="https://twitter.com/themefisher.com">
-                          <span class="social-icon"><i class="fab fa-twitter"></i></span>
-                      </a>
-                      <a title="Instagram" href="https://instagram.com/themefisher.com">
-                          <span class="social-icon"><i class="fab fa-instagram"></i></span>
-                      </a>
-                      <a title="Linkdin" href="https://github.com/themefisher.com">
-                          <span class="social-icon"><i class="fab fa-github"></i></span>
-                      </a>
-                    </li>
-                </ul>
-              </div>
--->
-              <!--/ Top social end -->
-          </div>
-          <!--/ Content row end -->
-        </div>
-        <!--/ Container end -->
-    </div>
-    <!--/ Topbar end -->
 <!-- Header start -->
 <header id="header" class="header-two">
   <div class="site-navigation">
@@ -85,7 +46,7 @@
                 
                 <div class="logo">
                     <a class="d-block" href="index.html">
-                      <!--- <img loading="lazy" src="images/logo.png" alt="Constra"> -->
+                      <img loading="lazy" src="images/logo.png" alt="Constra"> -->
                       PUSTANDA
                     </a>
                 </div><!-- logo end -->
@@ -155,8 +116,8 @@
     <div class="container">
         <div class="box-slider-content">
           <div class="box-slider-text">
-              <h2 class="box-slide-title">PUSAT PENGUATAN DAN PEMBERDAYAAN BAHASA</h2>
-              <h3 class="box-slide-sub-title">Badan Pengembangan dan Pembinaan Bahasa</h3>
+              <h2 class="box-slide-title">Badan Pengembangan dan Pembinaan Bahasa</h2>
+              <h3 class="box-slide-sub-title">PUSAT PENGUATAN DAN PEMBERDAYAAN BAHASA</h3>
               <p class="box-slide-description"></p>
               <p>
                 <a href="#" class="slider btn btn-primary">Layanan Kami</a>
@@ -173,9 +134,9 @@
               <div class="box-slider-text">
                 <h2 class="box-slide-title"> </h2>
                 <h3 class="box-slide-sub-title"> </h3>
-                <p class="box-slide-description"> </p>-->
-                <!-- <p><a href="about.html" class="slider btn btn-primary" aria-label="about-us">Know Us</a></p>-->
-            <!--  </div>
+                <p class="box-slide-description"> </p>
+                <p><a href="about.html" class="slider btn btn-primary" aria-label="about-us">Know Us</a></p>
+              </div>
           </div>-->
         </div>
     </div>
