--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                 
                 <div class="logo">
                     <a class="d-block" href="index.html">
-                      <img loading="lazy" src="images/logo.png" alt="Constra"> -->
-                      PUSTANDA
+                      <img loading="lazy" src="images/logo.png" alt="Constra"> 
                     </a>
                 </div><!-- logo end -->
 
