menu zona integritas, css logo

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                       <li class="nav-item dropdown">
                           <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Layanan <i class="fa fa-angle-down"></i></a>
                           <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">BIPA Daring</a></li>
+                            <li><a href="https://bipa.kemdikbud.go.id" target="_blank">BIPA Daring</a></li>
                             <li><a href="#">Penerjemahan</a></li>
                           </ul>
                       </li>
@@ -90,7 +90,17 @@
                           <a href="#" class="nav-link">Hubungi Kami</a>
                       </li>
               
-                      <li class="nav-item"><a class="nav-link" href="#">Zona Integritas</a></li>
+                      <li class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Zona Integritas <i class="fa fa-angle-down"></i></a>
+                        <ul class="dropdown-menu" role="menu">
+                          <li><a href="#" target="_blank">Manajemen Perubahan</a></li>
+                          <li><a href="#">Penataan Tata Laksana</a></li>
+                          <li><a href="#">Penataan Sistem Manajemen SDM</a></li>
+                          <li><a href="#">Penguatan Akuntabilitas Kinerja</a></li>
+                          <li><a href="#">Penguatan Pengawasan</a></li>
+                          <li><a href="#">Penguatan Kualitas Pelayanan Publik</a></li>
+                        </ul>
+                    </li>
                       <li class="nav-item"><a class="nav-link" href="#">Pengaduan</a></li>
                       <li class="nav-item">
                         <a  href="#"><span class="btn btn-success" style="width:fit-content">Masuk</span></a>
