logo bipa dan penerjemahan, ganti folder services menjadi layanan

--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
   <div class="banner-carousel-item" style="background-image:url(images/slider-main/bg2.jpg)">
     <div class="slider-content text-left">
         <div class="container">
-          <!-- <div class="box-slider-content">
+          <div class="box-slider-content">
               <div class="box-slider-text">
                 <h2 class="box-slide-title"> </h2>
-                <h3 class="box-slide-sub-title"> </h3>
+                <h3 class="box-slide-sub-title">Apel Pagi</h3>
                 <p class="box-slide-description"> </p>
-                <p><a href="about.html" class="slider btn btn-primary" aria-label="about-us">Know Us</a></p>
+                <p><a href="#" class="slider btn btn-primary" aria-label="#">#</a></p>
               </div>
-          </div>-->
+          </div>
         </div>
     </div>
   </div>
@@ -175,58 +175,42 @@
 <section id="ts-features" class="ts-features pb-2">
   <div class="container">
     <div class="row">
-        <div class="col-lg-4 col-md-6 mb-5">
+        <div class="col-lg-6 col-md-6 mb-5">
           <div class="ts-service-box">
               <div class="ts-service-image-wrapper">
-                <img loading="lazy" class="w-100" src="images/services/service1.jpg" alt="service-image">
+                <img loading="lazy" class="w-50" src="images/layanan/logo_bipa.png" alt="service-image">
               </div>
               <div class="d-flex">
-                <div class="ts-service-box-img">
-                    <img loading="lazy" src="images/icon-image/service-icon1.png" alt="service-icon" />
+                <div class="ts-service-box-img"><p style="align:center;">
+                    <img loading="lazy" src="images/icon-image/service-icon1.png" alt="service-icon" /></p>
                 </div>
                 <div class="ts-service-info">
-                    <h3 class="service-box-title"><a href="service-single.html">Zero Harm Everyday</a></h3>
-                    <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
-                    <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a>
+                    <h3 class="service-box-title"><a href="service-single.html">BIPA Daring</a></h3>
+                    <p>Layanan bagi para penutur asing yang ingin memiliki kemampuan berbahasa Indonesia, dan juga pengujian kemahiran berbahasa Indonesia bagi penutur asing.</p>
+                    <a class="learn-more d-inline-block" href="https://bipa.kemdikbud.go.id" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a>
                 </div>
               </div>
           </div><!-- Service1 end -->
         </div><!-- Col 1 end -->
 
-        <div class="col-lg-4 col-md-6 mb-5">
+        <div class="col-lg-6 col-md-6 mb-5">
           <div class="ts-service-box">
               <div class="ts-service-image-wrapper">
-                <img loading="lazy" class="w-100" src="images/services/service2.jpg" alt="service-image">
+                <img loading="lazy" class="w-50" src="images/layanan/logo_penerjemahan.png" alt="service-image">
               </div>
               <div class="d-flex">
                 <div class="ts-service-box-img">
                     <img loading="lazy" src="images/icon-image/service-icon2.png" alt="service-icon" />
                 </div>
                 <div class="ts-service-info">
-                    <h3 class="service-box-title"><a href="service-single.html">Virtual Construction</a></h3>
-                    <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
+                    <h3 class="service-box-title"><a href="service-single.html">Penerjemahan</a></h3>
+                    <p>Layanan ini berfokus pada penerjemahan buku-buku. Saat ini sudah ada lebih dari 1000 buku luar negeri yang telah diterjemahkan ke dalam bahasa Indonesia.</p>
                     <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a>
                 </div>
               </div>
           </div><!-- Service2 end -->
         </div><!-- Col 2 end -->
 
-        <div class="col-lg-4 col-md-6 mb-5">
-          <div class="ts-service-box">
-              <div class="ts-service-image-wrapper">
-                <img loading="lazy" class="w-100" src="images/services/service3.jpg" alt="service-image">
-              </div>
-              <div class="d-flex">
-                <div class="ts-service-box-img">
-                    <img loading="lazy" src="images/icon-image/service-icon3.png" alt="service-icon" />
-                </div>
-                <div class="ts-service-info">
-                    <h3 class="service-box-title"><a href="service-single.html">Build To Last</a></h3>
-                    <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
-                    <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a>
-                </div>
-              </div>
-          </div><!-- Service3 end -->
         </div><!-- Col 3 end -->
     </div><!-- Content row end -->
   </div><!-- Container end -->
