--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                 <img loading="lazy" class="w-50" src="images/layanan/logo_bipa.png" alt="service-image">
               </div>
               <div class="d-flex">
-                <div class="ts-service-box-img"><p style="align:center;">
-                    <img loading="lazy" src="images/icon-image/service-icon1.png" alt="service-icon" /></p>
-                </div>
+                <!-- <div class="ts-service-box-img">
+                    <img loading="lazy" src="images/icon-image/service-icon1.png" alt="service-icon" />
+                </div> -->
                 <div class="ts-service-info">
                     <h3 class="service-box-title"><a href="service-single.html">BIPA Daring</a></h3>
                     <p>Layanan bagi para penutur asing yang ingin memiliki kemampuan berbahasa Indonesia, dan juga pengujian kemahiran berbahasa Indonesia bagi penutur asing.</p>
@@ -199,9 +199,9 @@
                 <img loading="lazy" class="w-50" src="images/layanan/logo_penerjemahan.png" alt="service-image">
               </div>
               <div class="d-flex">
-                <div class="ts-service-box-img">
+                <!-- <div class="ts-service-box-img">
                     <img loading="lazy" src="images/icon-image/service-icon2.png" alt="service-icon" />
-                </div>
+                </div>-->
                 <div class="ts-service-info">
                     <h3 class="service-box-title"><a href="service-single.html">Penerjemahan</a></h3>
                     <p>Layanan ini berfokus pada penerjemahan buku-buku. Saat ini sudah ada lebih dari 1000 buku luar negeri yang telah diterjemahkan ke dalam bahasa Indonesia.</p>
@@ -211,7 +211,6 @@
           </div><!-- Service2 end -->
         </div><!-- Col 2 end -->
 
-        </div><!-- Col 3 end -->
     </div><!-- Content row end -->
   </div><!-- Container end -->
 </section><!-- Feature are end -->
