--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
                 <img loading="lazy" src="images/icon-image/fact1.png" alt="facts-img">
               </div>
               <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="1789">0</span></h2>
-                <h3 class="ts-facts-title">Total Projects</h3>
+                <h2 class="ts-facts-num"><span class="counterUp" data-count="45">0</span></h2>
+                <h3 class="ts-facts-title">Pegawai</h3>
               </div>
           </div><!-- Col end -->
 
@@ -234,8 +234,8 @@
                 <img loading="lazy" src="images/icon-image/fact2.png" alt="facts-img">
               </div>
               <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="647">0</span></h2>
-                <h3 class="ts-facts-title">Staff Members</h3>
+                <h2 class="ts-facts-num"><span class="counterUp" data-count="2">0</span></h2>
+                <h3 class="ts-facts-title">Layanan</h3>
               </div>
           </div><!-- Col end -->
 
@@ -244,8 +244,8 @@
                 <img loading="lazy" src="images/icon-image/fact3.png" alt="facts-img">
               </div>
               <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="4000">0</span></h2>
-                <h3 class="ts-facts-title">Hours of Work</h3>
+                <h2 class="ts-facts-num"><span class="counterUp" data-count="1500">0</span></h2>
+                <h3 class="ts-facts-title">Terjemahan Buku</h3>
               </div>
           </div><!-- Col end -->
 
@@ -254,8 +254,8 @@
                 <img loading="lazy" src="images/icon-image/fact4.png" alt="facts-img">
               </div>
               <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="44">0</span></h2>
-                <h3 class="ts-facts-title">Countries Experience</h3>
+                <h2 class="ts-facts-num"><span class="counterUp" data-count="1000">0</span></h2>
+                <h3 class="ts-facts-title">Negara Tujuan Pengajaran BIPA</h3>
               </div>
           </div><!-- Col end -->
 
