--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
             <!-- Col 1 end -->
 
-            <div class="col-lg-4 col-md-6 mb-5">
+            <div class="col-lg-8 col-md-8 mb-6">
               <div class="ts-service-box">
                 <div class="ts-service-image-wrapper">
                   <img loading="lazy" class="w-100" src="images/services/service2.jpg" alt="service-image" />
@@ -242,6 +242,7 @@
               <!-- Service2 end -->
             </div>
             <!-- Col 2 end -->
+          <!-- Spare column and containers for further use
 
             <div class="col-lg-4 col-md-6 mb-5">
               <div class="ts-service-box">
@@ -258,7 +259,7 @@
                     <a class="learn-more d-inline-block" href="/masuk.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- Service3 end -->
             </div>
             <!-- Col 3 end -->
