--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </script>
 
     <!-- Google Tag Manager -->
+    <!--
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -59,6 +60,7 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-NQ2C4FV");
     </script>
+    -->
     <!-- End Google Tag Manager -->
   </head>
 
@@ -104,13 +106,13 @@
                       <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Layanan <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu" role="menu">
-                          <li><a href="/eksternal-bipa.html">BIPA</a></li>
-                          <li><a href="/eksternal-penerjemahan.html">Penerjemahan</a></li>
+                          <li><a href="eksternal-bipa.html">BIPA</a></li>
+                          <li><a href="eksternal-penerjemahan.html">Penerjemahan</a></li>
                         </ul>
                       </li>
 
                       <li class="nav-item">
-                        <a href="/galeri.html" class="nav-link">Galeri</a>
+                        <a href="galeri.html" class="nav-link">Galeri</a>
                       </li>
 
                       <li class="nav-item">
@@ -121,7 +123,16 @@
                         <a href="#" class="nav-link">Hubungi Kami</a>
                       </li>
 
-                      <li class="nav-item"><a class="nav-link" href="#">Zona Integritas</a></li>
+                      <li class="nav-item dropdown-menu"><a class="nav-link" href="#">Zona Integritas</a>
+                        <ul class="dropdown-menu" role="menu">
+                          <li><a href="#">Manajemen Perubahan</a></li>
+                          <li><a href="#">Penataan Tata Laksana</a></li>
+                          <li><a href="#">Penataan Sistem Manajemen SDM</a></li>
+                          <li><a href="#">Penguatan Akuntabilitas Kinerja</a></li>
+                          <li><a href="#">Penguatan Pengawasan</a></li>
+                          <li><a href="#">Penguatan Kualitas Pelayanan Publik</a></li>
+                        </ul>
+                      </li>
                       <li class="nav-item"><a class="nav-link" href="#">Pengaduan</a></li>
                       <li class="nav-item"><a class="btn" href="masuk.html">
                         <span class="btn btn-success" style="width: fit-content"> Masuk </span></a></li>
@@ -148,7 +159,7 @@
                 <h1 class="box-slide-sub-title">Badan Pengembangan dan Pembinaan Bahasa</h1>
                 <p class="box-slide-description"></p>
                 <p>
-                  <a href="/layanan.html" class="slider btn btn-primary">Layanan Kami</a>
+                  <a href="layanan.html" class="slider btn btn-primary">Layanan Kami</a>
                 </p>
               </div>
             </div>
