--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
           <div class="container">
             <div class="box-slider-content">
               <div class="box-slider-text">
-                <h2 class="box-slide-title">PUSAT PENGUATAN DAN PEMBERDAYAAN BAHASA</h2>
-                <h1 class="box-slide-sub-title">Badan Pengembangan dan Pembinaan Bahasa</h1>
+                <h2 class="box-slide-title">Badan Pengembangan dan Pembinaan Bahasa</h2>
+                <h1 class="box-slide-sub-title">PUSAT PENGUATAN DAN PEMBERDAYAAN BAHASA</h1>
                 <p class="box-slide-description"></p>
                 <p>
-                  <a href="layanan.html" class="slider btn btn-primary">Layanan Kami</a>
+                  <a href="#" class="slider btn btn-primary">Layanan Kami</a>
                 </p>
               </div>
             </div>
@@ -181,26 +181,8 @@
           </div>
         </div>
       </div>
-      <!--
-<section class="call-to-action no-padding">
-  <div class="container">
-    <div class="action-style-box">
-        <div class="row">
-          <div class="col-md-8 text-center text-md-left">
-              <div class="call-to-action-text">
-                <h3 class="action-title">We understand your needs on construction</h3>
-              </div>
-          </div>--><!-- Col end -->
-      <!--
-          <div class="col-md-4 text-center text-md-right mt-3 mt-md-0">
-              <div class="call-to-action-btn">
-                <a class="btn btn-primary" href="contact.html">Request Quote</a>
-              </div>
-          </div>--><!-- col end -->
-      <!--        </div>--><!-- row end -->
-      <!--    </div>--><!-- Action style box -->
-      <!--  </div>--><!-- Container end -->
-      <!-- </section>--><!-- Action end -->
+    
+
         
       <!-- Section Layanan Eksternal-->
       <section id="external-services" class="external-services-area alert-bg">
