--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <body>
     <div class="body-inner">
       <!-- Header start -->
-      <header id="header" class="header-one">
+      <header id="header" class="header-two">
         <div class="site-navigation">
           <div class="container">
             <div class="row">
@@ -155,8 +155,8 @@
           <div class="container">
             <div class="box-slider-content">
               <div class="box-slider-text">
-                <h2 class="box-slide-title">Badan Pengembangan dan Pembinaan Bahasa</h2>
-                <h1 class="box-slide-sub-title">PUSAT PENGUATAN DAN PEMBERDAYAAN BAHASA</h1>
+                <h3 class="box-slide-title">Badan Pengembangan dan Pembinaan Bahasa</h3>
+                <h2 class="box-slide-sub-title">PUSAT PENGUATAN DAN PEMBERDAYAAN BAHASA</h2>
                 <p class="box-slide-description"></p>
                 <p>
                   <a href="#" class="slider btn btn-primary">Layanan Kami</a>
