update section subtitle dan import font google

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <a href="#" class="nav-link">Hubungi Kami</a>
                       </li>
 
-                      <li class="nav-item dropdown-menu"><a class="nav-link" href="#">Zona Integritas</a>
+                      <li class="nav-item dropdown"><a class="nav-link" href="#">Zona Integritas</a>
                         <ul class="dropdown-menu" role="menu">
                           <li><a href="#">Manajemen Perubahan</a></li>
                           <li><a href="#">Penataan Tata Laksana</a></li>
@@ -185,30 +185,25 @@
 
         
       <!-- Section Layanan Eksternal-->
-      <section id="external-services" class="external-services-area alert-bg">
+      <section id="ts-features" class="ts-features pb-2">
         <div class="container">
           <div class="row text-center">
             <div class="col-sm-12">
-              <h3 class="section-sub-title">Layanan Pustanda</h3>
+              <h5 class="section-sub-title">LAYANAN</h3>
             </div>
           </div>
-      
-      <section id="ts-features" class="ts-features pb-2">
         <div class="container">
           <div class="row">
-            <div class="col-lg-4 col-md-6 mb-5">
+            <div class="col-lg-6 col-md-6 mb-5">
               <div class="ts-service-box">
                 <div class="ts-service-image-wrapper">
-                  <img loading="lazy" class="w-100" src="images/services/service1.jpg" alt="service-image" />
+                  <img loading="lazy" class="w-50" src="images/layanan/logo_bipa.png" alt="service-image" />
                 </div>
                 <div class="d-flex">
-                  <div class="ts-service-box-img">
-                    <img loading="lazy" src="images/icon-image/service-icon1.png" alt="service-icon" />
-                  </div>
                   <div class="ts-service-info">
-                    <h3 class="service-box-title"><a href="/eksternal-bipa.html">Bahasa Indonesia bagi Penutur Asing</a></h3>
+                    <h3 class="service-box-title"><a href="eksternal-bipa.html">Bahasa Indonesia bagi Penutur Asing</a></h3>
                     <p>Layanan fasilitasi dan koordinasi dalam bidang Bahasa Indonesia bagi Penutur Asing (BIPA) untuk meningkatkan fungsi bahasa Indonesia menjadi bahasa internasional.</p>
-                    <a class="learn-more d-inline-block" href="/eksternal-bipa.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
+                    <a class="learn-more d-inline-block" href="eksternal-bipa.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
                   </div>
                 </div>
               </div>
@@ -216,17 +211,14 @@
             </div>
             <!-- Col 1 end -->
 
-            <div class="col-lg-8 col-md-8 mb-6">
+            <div class="col-lg-6 col-md-6 mb-6">
               <div class="ts-service-box">
                 <div class="ts-service-image-wrapper">
-                  <img loading="lazy" class="w-100" src="images/services/service2.jpg" alt="service-image" />
+                  <img loading="lazy" class="w-50" src="images/layanan/logo_penerjemahan.png" alt="service-image" />
                 </div>
                 <div class="d-flex">
-                  <div class="ts-service-box-img">
-                    <img loading="lazy" src="images/icon-image/service-icon2.png" alt="service-icon" />
-                  </div>
                   <div class="ts-service-info">
-                    <h3 class="service-box-title"><a href="/eksternal-penerjemahan.html">Penerjemahan</a></h3>
+                    <h3 class="service-box-title"><a href="eksternal-penerjemahan.html">Penerjemahan</a></h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat eius saepe quo quod porro, reiciendis incidunt deserunt iusto labore aliquid?</p>
                     <a class="learn-more d-inline-block" href="/eksternal-penerjemahan.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
                   </div>
