--- a/index.html
+++ b/index.html
@@ -116,14 +116,15 @@
                       </li>
 
                       <li class="nav-item">
-                        <a href="/berita.html" class="nav-link">Berita</a>
+                        <a href="berita.html" class="nav-link">Berita</a>
                       </li>
 
                       <li class="nav-item">
                         <a href="#" class="nav-link">Hubungi Kami</a>
                       </li>
 
-                      <li class="nav-item dropdown"><a class="nav-link" href="#">Zona Integritas</a>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Zona Integritas <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu" role="menu">
                           <li><a href="#">Manajemen Perubahan</a></li>
                           <li><a href="#">Penataan Tata Laksana</a></li>
