--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <h2 class="box-slide-sub-title">PUSAT PENGUATAN DAN PEMBERDAYAAN BAHASA</h2>
                 <p class="box-slide-description"></p>
                 <p>
-                  <a href="#" class="slider btn btn-primary">Layanan Kami</a>
+                  <a href="#layanan" class="slider btn btn-primary">Layanan Kami</a>
                 </p>
               </div>
             </div>
@@ -186,7 +186,7 @@
 
         
       <!-- Section Layanan Eksternal-->
-      <section id="ts-features" class="ts-features pb-2">
+      <section id="layanan" class="ts-features pb-2">
         <div class="container">
           <div class="row text-center">
             <div class="col-sm-12">
@@ -227,27 +227,7 @@
               </div>
               <!-- Service2 end -->
             </div>
-            <!-- Col 2 end -->
-          <!-- Spare column and containers for further use
 
-            <div class="col-lg-4 col-md-6 mb-5">
-              <div class="ts-service-box">
-                <div class="ts-service-image-wrapper">
-                  <img loading="lazy" class="w-100" src="images/services/service3.jpg" alt="service-image" />
-                </div>
-                <div class="d-flex">
-                  <div class="ts-service-box-img">
-                    <img loading="lazy" src="images/icon-image/service-icon3.png" alt="service-icon" />
-                  </div>
-                  <div class="ts-service-info">
-                    <h3 class="service-box-title"><a href="/eksternal-lainnya.html">Layanan Internal</a></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis illum aspernatur ab dolores eaque numquam similique repellendus ratione repellat accusamus.</p>
-                    <a class="learn-more d-inline-block" href="/masuk.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
-                  </div>
-                </div>
-              </div> -->
-              <!-- Service3 end -->
-            </div>
             <!-- Col 3 end -->
           </div>
           <!-- Content row end -->
