--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <div class="col-lg-6 col-md-6 mb-5">
               <div class="ts-service-box">
                 <div class="ts-service-image-wrapper">
-                  <img loading="lazy" class="w-50" src="images/layanan/logo_bipa.png" alt="service-image" />
+                  <img id="logo" loading="lazy" class="w-50" src="images/layanan/logo_bipa.png" alt="service-image" />
                 </div>
                 <div class="d-flex">
                   <div class="ts-service-info">
@@ -215,7 +215,7 @@
             <div class="col-lg-6 col-md-6 mb-6">
               <div class="ts-service-box">
                 <div class="ts-service-image-wrapper">
-                  <img loading="lazy" class="w-50" src="images/layanan/logo_penerjemahan.png" alt="service-image" />
+                  <img id="logo" loading="lazy" class="w-50" src="images/layanan/logo_penerjemahan.png" alt="service-image" />
                 </div>
                 <div class="d-flex">
                   <div class="ts-service-info">
@@ -557,7 +557,7 @@
           <!-- Container end -->
         </div>
         <!-- Footer main end -->
-<!--
+
         <div class="copyright">
           <div class="container">
             <div class="row align-items-center mt-auto">
@@ -567,11 +567,11 @@
                     <script>
                       document.write(new Date().getFullYear());
                     </script>
-                    Designed by by Ladislaus Laga Monang and <a href="https://www.linkedin.com/in/ferry-yun-kurniawan-20bb5216b/">Ferry Yun Kurniawan</a></span
+                    Designed by Ladislaus Laga Monang and <a href="https://www.linkedin.com/in/ferry-yun-kurniawan-20bb5216b/">Ferry Yun Kurniawan</a></span
                   >
                 </div>
               </div>
--->
+
 
 
             <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top position-fixed">
