--- a/index.html
+++ b/index.html
@@ -96,18 +96,18 @@
                       <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Profil <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu" role="menu">
-                          <li><a href="#">Struktur Organisasi</a></li>
-                          <li><a href="#">Budaya Kerja</a></li>
-                          <li><a href="#">Tugas dan Fungsi</a></li>
-                          <li><a href="#">Dasar Hukum</a></li>
+                          <li><a href="struktur.html">Struktur Organisasi</a></li>
+                          <li><a href="budayakerja.html">Budaya Kerja</a></li>
+                          <li><a href="tusi.html">Tugas dan Fungsi</a></li>
+                          <li><a href="dasarhukum.html">Dasar Hukum</a></li>
                         </ul>
                       </li>
 
                       <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Layanan <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu" role="menu">
-                          <li><a href="#">BIPA</a></li>
-                          <li><a href="#">Penerjemahan</a></li>
+                          <li><a href="https://bipadaring.kemdikbud.go.id">BIPA</a></li>
+                          <li><a href="https://penerjemahan.kemdikbud.go.id">Penerjemahan</a></li>
                         </ul>
                       </li>
 
