--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <div id="navbar-collapse" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav ml-auto align-items-center">
                       <li class="nav-item active">
-                        <a href="#" class="nav-link">Beranda </a>
+                        <a href="index.html" class="nav-link">Beranda </a>
                       </li>
 
                       <li class="nav-item dropdown">
@@ -106,8 +106,8 @@
                       <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Layanan <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu" role="menu">
-                          <li><a href="https://bipadaring.kemdikbud.go.id">BIPA</a></li>
-                          <li><a href="https://penerjemahan.kemdikbud.go.id">Penerjemahan</a></li>
+                          <li><a href="https://bipadaring.kemdikbud.go.id" target="_blank">BIPA</a></li>
+                          <li><a href="https://penerjemahan.kemdikbud.go.id" target="_blank">Penerjemahan</a></li>
                         </ul>
                       </li>
 
