--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       </li>
 
                       <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Layanan <i class="fa fa-angle-down"></i></a>
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown">Layanan <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu" role="menu">
                           <li><a href="https://bipadaring.kemdikbud.go.id" target="_blank">BIPA</a></li>
                           <li><a href="https://penerjemahan.kemdikbud.go.id" target="_blank">Penerjemahan</a></li>
