--- a/budayakerja.html
+++ b/budayakerja.html
@@ -87,29 +87,29 @@
                               <span class="navbar-toggler-icon"></span>
                             </button>
 
-                  <div id="navbar-collapse" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav ml-auto align-items-center">
-                      <li class="nav-item active">
-                        <a href="#" class="nav-link">Beranda </a>
-                      </li>
-
-                      <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Profil <i class="fa fa-angle-down"></i></a>
-                        <ul class="dropdown-menu" role="menu">
-                          <li><a href="struktur.html">Struktur Organisasi</a></li>
-                          <li><a href="budayakerja.html">Budaya Kerja</a></li>
-                          <li><a href="tusi.html">Tugas dan Fungsi</a></li>
-                          <li><a href="dasarhukum.html">Dasar Hukum</a></li>
-                        </ul>
-                      </li>
-
-                      <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Layanan <i class="fa fa-angle-down"></i></a>
-                        <ul class="dropdown-menu" role="menu">
-                          <li><a href="https://bipadaring.kemdikbud.go.id">BIPA</a></li>
-                          <li><a href="https://penerjemahan.kemdikbud.go.id">Penerjemahan</a></li>
-                        </ul>
-                      </li>
+                            <div id="navbar-collapse" class="collapse navbar-collapse">
+                                <ul class="nav navbar-nav ml-auto align-items-center">
+                                  <li class="nav-item active">
+                                    <a href="index.html" class="nav-link">Beranda </a>
+                                  </li>
+            
+                                  <li class="nav-item dropdown">
+                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Profil <i class="fa fa-angle-down"></i></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                      <li><a href="struktur.html">Struktur Organisasi</a></li>
+                                      <li><a href="budayakerja.html">Budaya Kerja</a></li>
+                                      <li><a href="tusi.html">Tugas dan Fungsi</a></li>
+                                      <li><a href="dasarhukum.html">Dasar Hukum</a></li>
+                                    </ul>
+                                  </li>
+            
+                                  <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown">Layanan <i class="fa fa-angle-down"></i></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                      <li><a href="https://bipadaring.kemdikbud.go.id" target="_blank">BIPA</a></li>
+                                      <li><a href="https://penerjemahan.kemdikbud.go.id" target="_blank">Penerjemahan</a></li>
+                                    </ul>
+                                  </li>
 
 
                       <li class="nav-item">
