--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
               <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg navbar-light p-0">
                   <div class="logo-container">
+                    <a href="index.html">
                       <img class="logo img-fluid" src="images/logo.png" alt="Pustanda">
+                    </a>
                   </div>
                   <!-- logo end -->
 
@@ -94,7 +96,7 @@
                       </li>
 
                       <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Profil <i class="fa fa-angle-down"></i></a>
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown">Profil <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu" role="menu">
                           <li><a href="struktur.html">Struktur Organisasi</a></li>
                           <li><a href="budayakerja.html">Budaya Kerja</a></li>
