update budayakerja and add new class to css

--- a/budayakerja.html
+++ b/budayakerja.html
@@ -154,17 +154,78 @@
       </header>
       <!--/ Header end -->
 
+      <!--/ CONTENT START -->
       <section class="content">
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <h3 class="column-title">.....</h3>
+              <h3 class="column-title">GRAFIS</h3>
             </div>
             <!-- Col end -->
             <div class="col-lg-6 mt-5 mt-lg-0">
-              <h3 class="column-title">...</h3>
-
-              <!-- Clients row end -->
+              <h3 class="column-title">BUDAYA KERJA KEMENDIKBUDRISTEK</h3>
+              <!-- Budaya Kerja start -->
+              <div class="row p-1">
+                <div class="col-lg-4 vertical-center keys">
+                  MEMILIKI INTEGRITAS
+                </div>
+                <div class="col-lg-8 vertical-center-left keys-info">
+                  Keselarasan antara pikiran, perkataan, dan perbuatan
+                </div>
+              </div>
+              <div class="row p-1">
+                <div class="col-lg-4 vertical-center keys">
+                  KREATIF DAN INOVATIF
+                </div>
+                <div class="col-lg-8 vertical-center-left keys-info">
+                Memiliki daya cipta, memiliki kemampuan untuk menciptakan hal baru 
+                yang berbeda dari yang sudah ada atau yang 
+                sudah dikenal sebelumnya (gagasan, metode, atau alat)
+                </div>
+              </div>
+              <div class="row p-1">
+                <div class="col-lg-4 vertical-center keys">
+                  INISIATIF
+                </div>
+                <div class="col-lg-8 vertical-center-left keys-info">
+                  Kemampuan seseorang untuk bertindak melebihi yang dibutuhkan
+                  atau yang dituntut dari pekerjaan
+                </div>
+              </div>
+              <div class="row p-1">
+                <div class="col-lg-4 vertical-center keys">
+                  PEMBELAJAR
+                </div>
+                <div class="col-lg-8 vertical-center-left keys-info">
+                  Selalu berusaha untuk mengembangkan kompetensi dan profesionalisme
+                </div>
+              </div>
+              <div class="row p-1">
+                <div class="col-lg-4 vertical-center keys">
+                  MENJUNJUNG METOKRASI
+                </div>
+                <div class="col-lg-8 vertical-center-left keys-info">
+                  Menjunjung tinggi keadilan dalam pemberian penghargaan
+                  bagi karyawan yang berkompeten
+                </div>
+              </div>
+              <div class="row p-1">
+                <div class="col-lg-4 vertical-center keys">
+                  TERLIBAT AKTIF
+                </div>
+                <div class="col-lg-8 vertical-center-left keys-info">
+                  Senantiasa berpartisipasi dalam setiap kegiatan
+                </div>
+              </div>
+              <div class="row p-1">
+                <div class="col-lg-4 vertical-center keys">
+                  TANPA PAMRIH
+                </div>
+                <div class="col-lg-8 vertical-center-left keys-info">
+                  Bekerja dengan tulus ikhlas dan penuh dedikasi
+                </div>
+              </div>
+              <!-- Budaya Kerja end -->
             </div>
             <!-- Col end -->
           </div>
@@ -173,7 +234,7 @@
         <!--/ Container end -->
       </section>
       <!-- Content end -->
-
+      <!--/ CONTENT END -->
 
 
       <footer id="footer" class="footer bg-overlay">
