--- a/budayakerja.html
+++ b/budayakerja.html
@@ -158,8 +158,7 @@
       <section class="content">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6">
-              <h3 class="column-title">GRAFIS</h3>
+            <div class="col-lg-6 budaya-kerja">
             </div>
             <!-- Col end -->
             <div class="col-lg-6 mt-5 mt-lg-0">
