update link bipa

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown">Layanan <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu" role="menu">
-                          <li><a href="https://bipadaring.kemdikbud.go.id" target="_blank">BIPA</a></li>
+                          <li><a href="https://bipa.kemdikbud.go.id" target="_blank">BIPA</a></li>
                           <li><a href="https://penerjemahan.kemdikbud.go.id" target="_blank">Penerjemahan</a></li>
                         </ul>
                       </li>
