--- a/budayakerja.html
+++ b/budayakerja.html
@@ -114,33 +114,37 @@
                                 </li>
 
 
-                      <li class="nav-item">
-                        <a href="#" class="nav-link">Galeri</a>
-                      </li>
+                                <li class="nav-item dropdown">
+                                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Informasi <i class="fa fa-angle-down"></i></a>
+                                  <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">SAKIP</a></li>
+                                  </ul>
+                                </li>
+                              <!-- Removed Menu -->
+                                <li class="nav-item">
+                                  <a href="#" class="nav-link">Galeri</a>
+                                </li>
+          
+                                <li class="nav-item">
+                                  <a href="#" class="nav-link">Hubungi Kami</a>
+                                </li>
+                              <!-- Removed Menu End-->
 
-                      <li class="nav-item">
-                        <a href="#" class="nav-link">Berita</a>
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="#" class="nav-link">Hubungi Kami</a>
-                      </li>
-
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Zona Integritas <i class="fa fa-angle-down"></i></a>
-                        <ul class="dropdown-menu" role="menu">
-                          <li><a href="#">Manajemen Perubahan</a></li>
-                          <li><a href="#">Penataan Tata Laksana</a></li>
-                          <li><a href="#">Penataan Sistem Manajemen SDM</a></li>
-                          <li><a href="#">Penguatan Akuntabilitas Kinerja</a></li>
-                          <li><a href="#">Penguatan Pengawasan</a></li>
-                          <li><a href="#">Penguatan Kualitas Pelayanan Publik</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item"><a class="nav-link" href="#">Pengaduan</a></li>
-                      <li class="nav-item"><a class="btn" href="masuk.html"><!-- Modal Up-->
-                        <span class="btn btn-success" style="width: fit-content"> Masuk </span></a></li>
-                    </ul>
+                              <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Zona Integritas <i class="fa fa-angle-down"></i></a>
+                                <ul class="dropdown-menu" role="menu">
+                                  <li><a href="#">Manajemen Perubahan</a></li>
+                                  <li><a href="#">Penataan Tata Laksana</a></li>
+                                  <li><a href="#">Penataan Sistem Manajemen SDM</a></li>
+                                  <li><a href="#">Penguatan Akuntabilitas Kinerja</a></li>
+                                  <li><a href="#">Penguatan Pengawasan</a></li>
+                                  <li><a href="#">Penguatan Kualitas Pelayanan Publik</a></li>
+                                </ul>
+                              </li>
+                              <li class="nav-item"><a class="nav-link" href="#">Pengaduan</a></li>
+                              <li class="nav-item"><a class="btn" href="masuk.html"><!-- Modal Up-->
+                                <span class="btn btn-success" style="width: fit-content"> Masuk </span></a></li>
+                            </ul>
                   </div>
                 </nav>
               </div>
