--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
                       </li>
 
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown">Profil <i class="fa fa-angle-down"></i></a>
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown">Tentang Kami<i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu" role="menu">
-                          <li><a href="struktur.html">Struktur Organisasi</a></li>
+                          <li><a href="struktur.html">Profil Organisasi</a></li>
                           <li><a href="budayakerja.html">Budaya Kerja</a></li>
                           <li><a href="tusi.html">Tugas dan Fungsi</a></li>
                           <li><a href="dasarhukum.html">Dasar Hukum</a></li>
@@ -144,18 +144,21 @@
                         </ul>
                       </li>
 
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Informasi <i class="fa fa-angle-down"></i></a>
+                        <ul class="dropdown-menu" role="menu">
+                          <li><a href="#">SAKIP</a></li>
+                        </ul>
+                      </li>
+                    <!-- Removed Menu -->
                       <li class="nav-item">
                         <a href="#" class="nav-link">Galeri</a>
                       </li>
 
                       <li class="nav-item">
-                        <a href="#" class="nav-link">Berita</a>
-                      </li>
-
-                      <li class="nav-item">
                         <a href="#" class="nav-link">Hubungi Kami</a>
                       </li>
-
+                    <!-- Removed Menu End-->
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Zona Integritas <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu" role="menu">
